mastodon/mastodon-twitter-poster-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-twitter-poster-web
  labels:
    app: mastodon-twitter-poster-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mastodon-twitter-poster-web
  template:
    metadata:
      labels:
        app: mastodon-twitter-poster-web
    spec:
      containers:
      - name: mastodon-twitter-poster-web
        image: ghcr.io/doridian/mastodon-twitter-poster/mastodon-twitter-poster:latest
        imagePullPolicy: Always
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 5
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 100m
            memory: 300Mi
          limits:
            cpu: 400m
            memory: 600Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-twitter-poster-web
  labels:
    app: mastodon-twitter-poster-web
spec:
  selector:
    app: mastodon-twitter-poster-web
  ports:
    - port: 3000
      targetPort: 3000
  clusterIP: None
  type: ClusterIP
