mastodon/mastodon-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-path: /
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: 80m
    nginx.ingress.kubernetes.io/from-to-www-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - f0x.es
      - www.f0x.es
    secretName: mastodon-cert
  rules:
  - host: f0x.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mastodon-web
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://f0x.es
    nginx.ingress.kubernetes.io/permanent-redirect-code: '308'
  name: mastodon-redirect-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - mastodon.f0x.es
    secretName: mastodon-cert
  rules:
  - host: '*.f0x.es'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: invalid-backend
            port:
              number: 1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-assets-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, HEAD"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://f0x.es"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - assets.f0x.es
    secretName: mastodon-cert
  rules:
  - host: assets.f0x.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mastodon-static
            port:
              number: 3131
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mastodon-streaming-ingress
  annotations:
    nginx.ingress.kubernetes.io/server-snippets: |
      location / {
        proxy_set_header Upgrade $http_upgrade;
        proxy_http_version 1.1;
        proxy_set_header X-Forwarded-Host $http_host;
        proxy_set_header X-Forwarded-Proto $scheme;
        proxy_set_header X-Forwarded-For $remote_addr;
        proxy_set_header Host $host;
        proxy_set_header Connection "upgrade";
        proxy_cache_bypass $http_upgrade;
      }
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - streaming.f0x.es
    secretName: mastodon-cert
  rules:
  - host: streaming.f0x.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mastodon-streaming
            port:
              number: 4000
