mastodon/mastodon-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mastodon-network-policy
spec:
  podSelector: {}
  policyTypes:
  - Ingress
