mastodon/mastodon-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-redis-proxy
  labels:
    app: mastodon-redis-proxy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mastodon-redis-proxy
  template:
    metadata:
      labels:
        app: mastodon-redis-proxy
    spec:
      containers:
      - name: mastodon-redis-proxy
        image: ghcr.io/doridian/sentinel-proxy/sentinel-proxy:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-proxy-config
          mountPath: /app/config
      volumes:
      - name: redis-proxy-config
        configMap:
          name: mastodon-redis-proxy-config
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: "app"
                operator: In
                values:
                - mastodon-redis-proxy
            topologyKey: "kubernetes.io/hostname"
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-redis-proxy
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: mastodon-redis-proxy
    port: 6379
    targetPort: 6379
    protocol: TCP 
  selector:
    app: mastodon-redis-proxy
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mastodon-redis-proxy-network-policy
spec:
  podSelector:
    matchLabels:
      app: mastodon-redis-proxy
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mastodon-web
    - podSelector:
        matchLabels:
          app: mastodon-streaming
    - podSelector:
        matchLabels:
          app: mastodon-sidekiq-default
    - podSelector:
        matchLabels:
          app: mastodon-sidekiq-scheduler
    ports:
    - protocol: TCP
      port: 6379
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mastodon-redis-network-policy
spec:
  podSelector:
    matchLabels:
      name: mastodon-redis
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: mastodon-redis-proxy
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: mastodon-redis
    ports:
    - protocol: TCP
      port: 6379
    - protocol: TCP
      port: 26379
