mastodon/mastodon-static.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mastodon-static
  labels:
    app: mastodon-static
spec:
  replicas: 3
  selector:
    matchLabels:
      app: mastodon-static
  template:
    metadata:
      labels:
        app: mastodon-static
    spec:
      containers:
      - name: mastodon-static
        image: ghcr.io/doridian/mastodon-docker/mastodon-docker
        imagePullPolicy: Always
        command: ["nginx", "-g", "daemon off;"]
        securityContext:
          runAsUser: 0
        ports:
        - containerPort: 3131
        resources:
          requests:
            cpu: 100m
            memory: 50Mi
          limits:
            cpu: 100m
            memory: 100Mi
---
apiVersion: v1
kind: Service
metadata:
  name: mastodon-static
  labels:
    app: mastodon-static
spec:
  selector:
    app: mastodon-static
  ports:
    - port: 3131
      targetPort: 3131
  clusterIP: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mastodon-static-network-policy
spec:
  podSelector:
    matchLabels:
      app: mastodon-static
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
    ports:
    - protocol: TCP
      port: 3131
